Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2178

Thrift generator returns error exit code on --version

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9.1
    • 0.9.2
    • Compiler (General)
    • None
    • Patch Available

    Description

      The generator exits w/ status 1 when run with '--version', which is surprising and requires special handling when used by scripting tools that automatically check exit codes for errors.

      Attachments

        Activity

          People

            nater Nate Rosenblum
            nater Nate Rosenblum
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: