THRIFT-2178:Thrift generator returns error exit code on --version Client: compiler Patch: Nate Rosenblum

Changes exit status of --version call.